Updated OBF description (at their request)

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<div class="4u 12u(mobile)">
 								<section class="box style1">
 									<p><a href="https://openbadgefactory.com/"><img src="images/obf.png" alt="Open Badge Factory" style="max-width:100%;"></a></p>
-									<p><a href="https://openbadgefactory.com/">Open Badge Factory</a> is a versatile platform for organisations wanting to create, issue and manage Open Badges.</p>
+									<p><a href="https://openbadgefactory.com/">Open Badge Factory</a> is a versatile platform for organisations wanting to create, issue and manage Open Badges. OBF provides the tools organisations need to implement a meaningful and sustainable Open Badges system.</p>
 
 								</section>
 							</div>
