Updated Badgr description at Nate's request

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<div class="4u 12u(mobile)">
 								<section class="box style1">
 									<p><a href="http://info.badgr.io/"><img src="images/badgr.png" alt="Badgr"></a></p>
-										<p><a href="http://info.badgr.io/">Badgr</a> is an achievement recognition and tracking system that uses Open Badges for competency recognition, professional development, and connected learning.</p>
+										<p><a href="http://info.badgr.io/">Badgr</a> is an open source achievement recognition and tracking system used to issue, organize, and share Open Badges. It is used by staff and badge earners around the world for competency recognition, professional development, and connected learning.</p>
 								</section>
 							</div>
 							<div class="4u 12u(mobile)">
