Added link to archive page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 							</header>
 							<p>A bi-weekly newsletter for those interested in keeping up-to-date with what's happening in the world of <a href="https://openbadges.org">Open Badges</a>.</p>
 							<a href="http://eepurl.com/cv09PP" class="button big scrolly">Click here to sign up!</a>
+							<p><a href="http://us14.campaign-archive1.com/home/?u=996c23c5b9ec4e92e3762a2cc&id=2f78fad2e0">View past issues</a></p>
 						</div>
 					</div>
 				</article>
