--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<header>
 								<h1>Welcome to <strong>Badge News!</strong></h1>
 							</header>
-							<p>A bi-weekly newsletter for those interested in keeping up-to-date with what's happening in the world of <a href="https://openbadges.org">Open Badges</a>.</p>
+							<p>A monthly newsletter for those interested in keeping up-to-date with what's happening in the world of <a href="https://openbadges.org">Open Badges</a>.</p>
 							<a href="http://eepurl.com/cv09PP" class="button big scrolly">Click here to sign up!</a>
 							<br /><br />
 							<p><a href="http://us14.campaign-archive1.com/home/?u=996c23c5b9ec4e92e3762a2cc&id=2f78fad2e0">View past issues</a></p>
@@ -43,7 +43,7 @@
 			<div class="wrapper style2">
 				<article id="work">
 					<header>
-						<h2>Foundational sponsors</h2>
+						<h2>Sponsors</h2>
 					</header>
 					<div class="container">
 						<div class="row">
